Fixed site delete button ie styling

--- a/src/components/RankingTable/styles.scss
+++ b/src/components/RankingTable/styles.scss
@@ -71,11 +71,11 @@
     }
 
     &__delete {
+      color: #737373;
       margin-left: 15px;
       margin-top: -5px;
       border: none;
-      background-color: inherit;
-      color: $color-accent;
+      background-color: #fff;
       cursor: pointer;
       opacity: 0.6;
       padding-top: 7px;
